# nrf-rs-smartled

./: Cargo.toml
nrf52-firmware/: Cargo.toml  Embed.toml  memory.x
nrf52-firmware/.cargo/: config  config.toml
nrf52-firmware/src/: ieee802154.rs  leds.rs  main.rs  timers.rs
pc-software/: Cargo.toml
pc-software/examples/: 8x8-demo.rs  comet2.rs  cosmet-beat.rs  cosmet.rs  hue.rs  main2.rs  oklab.rs  oldmain2.rs  rand_colour.rs  rand_colour2.rs  rand_pixel.rs  rgb-smooth.rs  rgb.rs  rgbw-cosmet.rs  rgbw.rs  spiral.rs  status.rs  zigbee.rs
pc-software/src/: lib.rs
uart-protocol/: Cargo.toml
uart-protocol/src/: lib.rs
