[package]
name = "nrf52-firmware"
version = "0.2.0"
authors = [ "René van Dorst <opensource@vdorst.com>" ]
license = "MIT OR Apache-2.0"
# 2021 changes the PWM burst to ~14.49m while 2018 is ~14.25mS
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = { version = "1.0", default-features = false }
cortex-m-rt = { version = "0.7.1", features = ["device"] }
nrf52840-hal = { version = "0.15", features = ["rt"] }
embedded-dma = "0.2"
heapless = "0.7"
usb-device = "0.2"
usbd-serial = "0.1"
ringbuffer = { version = "0.8",  default-features = false }
uart-protocol = { path = "../uart-protocol", features = ["defmt"]}
defmt = { version = "0.3" }
defmt-rtt =  { version = "0.3" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.embedded-hal]
version = "0.2.6"
features = ["unproven"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3
overflow-checks = true
