[package]
name = "uart-protocol"
version = "0.1.0"
authors = [ "René van Dorst <opensource@vdorst.com>" ]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
heapless = "0.7"
postcard = "1.0"
serde = { version = "1.0", default-features = false }
defmt = { version = "0.3", optional = true }